// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. primary tile 1`] = `
<View>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </View>
  <View>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </View>
</View>
`;

exports[`2. primary tiles without image 1`] = `
<View>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </View>
  <Text>
    <Text>
      
      The 
      <Text>
        Duke of Edinburgh
      </Text>
       could be charged with driving without due care and attention after his car accident yesterday
      ...
    </Text>
  </Text>
</View>
`;
